--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "format": "prettier --write \"src/**/*.{js,ts}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish":"npm publish"
+    "publish": "npm publish"
   },
   "keywords": [],
   "author": "yulei",
@@ -19,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/three": "^0.164.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.57.0",
@@ -28,5 +29,8 @@
     "rollup": "^4.17.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "three": "^0.164.1"
   }
 }
